--- a/NEM-2/views/create.ejs
+++ b/NEM-2/views/create.ejs
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/create">add</a>
+    <form  method="post">
+        <input type="text" name="text">
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
