added output to main page

--- a/NEM-2/views/index.ejs
+++ b/NEM-2/views/index.ejs
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/create"></a>
+    <a href="/create">add</a>
+    <ul>
+        <% arr.forEach(function(item){ %>
+          <li>
+              <%= item %>
+          </li>
+        <% }); %>
+      </ul>
 </body>
 </html>
