creating the first model

--- a/NEM-2/views/index.ejs
+++ b/NEM-2/views/index.ejs
@@ -8,9 +8,11 @@
 <body>
     <a href="/create">add</a>
     <ul>
-        <% arr.forEach(function(item){ %>
+        <% posts.forEach(function(post){ %>
           <li>
-              <%= item %>
+              <%= post.title %>
+              <br>
+              <%= post.body %>
           </li>
         <% }); %>
       </ul>
