--- a/NEM-2/views/index.ejs
+++ b/NEM-2/views/index.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<%- include ('layout/header.ejs') %> 
+
     <a href="/create">add</a>
     <ul>
         <% posts.forEach(function(post){ %>
@@ -16,5 +10,8 @@
           </li>
         <% }); %>
       </ul>
-</body>
-</html>
+
+<%- include ('layout/footer.ejs') %> 
+
+
+
