--- a/NEM-2/views/create.ejs
+++ b/NEM-2/views/create.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<%- include ('layout/header.ejs') %> 
+
     <form  method="post">
         <input type="text" name="title">
         <br>
@@ -13,5 +7,5 @@
         <br>
         <button type="submit">Submit</button>
     </form>
-</body>
-</html>
+    
+<%- include ('layout/footer.ejs') %> 
