delet old project

--- a/NEM-2/views/index.ejs
+++ b/NEM-2/views/index.ejs
@@ -1,15 +1,6 @@
 <%- include ('layout/header.ejs') %> 
 
-    <a href="/create">add</a>
-    <ul>
-        <% posts.forEach(function(post){ %>
-          <li>
-              <%= post.title %>
-              <br>
-              <%= post.body %>
-          </li>
-        <% }); %>
-      </ul>
+    <h3>Hello</h3>
 
 <%- include ('layout/footer.ejs') %> 
 
