--- a/NEM-3/dev/scss/style.scss
+++ b/NEM-3/dev/scss/style.scss
@@ -1,7 +1,7 @@
 $blackColor: #333;
-$whiteColor: #fff;
-$greyColor: #e8e8e8;
-$primaryColor: #08aef1;
+$whiteColor: rgb(202, 199, 199);
+$greyColor: #cec8c8;
+$primaryColor: #31a6d4;
 $secondaryColor: #d9ab4d;
 $freeSpace: 15px;
 $headerHeight: 49px;
@@ -9,6 +9,8 @@ $footerHeight: 49px;
 
 @import 'reset';
 @import 'grid';
+@import 'typography';
+@import 'forms';
 
 html {
     display: flex;
@@ -25,7 +27,9 @@ body {
     padding-top: $headerHeight + $freeSpace;
   }
 
-
+ 
 @import 'header';
 @import 'main';
 @import 'footer';
+@import 'components/post';
+@import 'components/auth';
